@@ -1,8 +1,9 @@
-@comment $NetBSD: PLIST,v 1.2 2003/09/09 14:18:59 recht Exp $
+@comment $NetBSD: PLIST,v 1.3 2005/01/29 10:17:07 mjl Exp $
 bin/postgresql_autodoc
 share/postgresql_autodoc/dia.tmpl
 share/postgresql_autodoc/dot.tmpl
 share/postgresql_autodoc/html.tmpl
 share/postgresql_autodoc/xml.tmpl
+share/postgresql_autodoc/neato.tmpl
 share/postgresql_autodoc/zigzag.dia.tmpl
 @dirrm share/postgresql_autodoc
