@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.6 2005/01/29 10:17:07 mjl Exp $
+$NetBSD: distinfo,v 1.7 2005/02/24 14:48:47 agc Exp $
 
-SHA1 (postgresql_autodoc-1.24.tar.gz) = 34dcd65ec73d3bbdb39e690cf6da2a37818cb4b2
-RMD160 (postgresql_autodoc-1.24.tar.gz) = 6315ca8d55516268293bee1269c41de2079bcfce
-Size (postgresql_autodoc-1.24.tar.gz) = 41755 bytes
+SHA1 (postgresql_autodoc-1.30.tar.gz) = 91de871ca5e0adf649de0c5d597be5a678268486
+RMD160 (postgresql_autodoc-1.30.tar.gz) = 91f00429d0675b578b0542ed2f94958eb37b2946
+Size (postgresql_autodoc-1.30.tar.gz) = 46216 bytes
